--- a/SalesWebMvc/Views/Sellers/Index.cshtml
+++ b/SalesWebMvc/Views/Sellers/Index.cshtml
@@ -5,9 +5,13 @@
 
 <h2>@ViewData["Title"]</h2>
 
+<p>
+    <a asp-action="Create" class="btn btn-info btn-sm">Create New</a>
+</p>
+
 <table class="table table-striped table-hover">
     <thead>
-        <tr class="success">
+        <tr class="info">
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
