--- a/SalesWebMvc/Views/Sellers/Create.cshtml
+++ b/SalesWebMvc/Views/Sellers/Create.cshtml
@@ -39,7 +39,10 @@
                 <select asp-for="Seller.DepartmentId" asp-items="@(new SelectList(Model.Departments,"Id","Name"))" class="form-control"></select>
             </div>
             <div class="form-group">
-                <input type="submit" vale="Create" class="btn btn-info btn-sm" />
+                <input type="submit" value="Create" class="btn btn-info btn-sm" />
+            </div>
+            <div>
+                <a asp-action="Index">Back to list</a>
             </div>
         </form>
     </div>
